# npm-downloader

./: .gitignore  Cargo.toml  LICENSE  README.md  pnpm-lock.yaml
src/: dep_parser.rs  downloader.rs  main.rs  parser.rs
